css/style.css
/*-------------------------GLOBAL STYLES--------------------------------------------*/
html {
  height: 100%
}

body {
  font-family: 'Lato', sans-serif;
  color: #fff;
  line-height: 1.5;
  background: radial-gradient(#0a0020, #000);
  background-attachment: fixed;
  margin: 0%;
  padding: 0%;
  overflow-x: hidden;
  min-height: 100%
}

li {
  list-style: none;
}

a {
  color: #1976D2;
  text-decoration: none;
  outline: none;
}

h2,
h3,
h4 {
  font-size: 1em;
}

h3 {
  margin: 20px 0;
}

.visible {
  display: block !important;
}

/*----------------------------------Scrollbar-----------------------------------*/
@media (max-width: 992px) {
  ::-webkit-scrollbar {
    display: none;
  }
}

::-webkit-scrollbar {
  width: 10px;
  background-color: transparent;
}

::-webkit-scrollbar:hover {
  background-color: #a1a1a1;
}

::-webkit-scrollbar-thumb {
  width: 45px;
  background-color: #1E88E5;
  border-radius: 50px;
}

/*-------------------------LANDING PAGE--------------------------------------------*/
#landing-page {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  min-height: 100vh;
  z-index: 10;
  overflow-y: hidden;
}

#profile-badge {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-radius: 10px;
  background-color: rgba(255, 255, 255, 0.1);
  padding: 10px;
  z-index: 2;
}

#profile-badge h1 {
  font-weight: 400;
  font-size: 2em;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.contact-icons {
  display: flex;
}

.contact-icons a {
  display: flex;
  color: #fff;
  padding: 12px;
  margin: 10px 10px;
  border: 2px dotted #fff;
  border-radius: 50%;
}

.contact-icons a:hover {
  background: #fff;
  color: #000 !important;
  -webkit-transition: all .3s ease-in-out;
  -moz-transition: all .3s ease-in-out;
  transition: all .3s ease-in-out;
}

#lp-border span {
  position: absolute;
  background-color: #fff;
  animation: createBox 9s;
  z-index: 5;
}

#lp-top-border,
#lp-bottom-border {
  left: 10%;
  height: 1px;
  width: 80%;
}

#lp-top-border {
  top: 40px;
}

#lp-bottom-border {
  bottom: 40px;
}

#lp-left-border,
#lp-right-border {
  top: 10%;
  width: 1px;
  height: 80%;
}

#lp-left-border {
  left: 40px;
}

#lp-right-border {
  right: 40px;
}

@keyframes createBox {
  from {
    transform: scale(0);
  }

  to {
    transform: scale(1);
  }
}

@media (max-width: 768px) {
  #lp-border span {
    display: none;
  }
}

.scroll-arrow-container {
  position: absolute;
  bottom: 10%;
  left: 50%;
  z-index: 5;
}

.scroll-arrow {
  display: block;
  width: 16px;
  height: 16px;
  border-right: 2px solid white;
  border-bottom: 2px solid white;
  margin: 0 0 3px 4px;
  -ms-transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
}

#lp-arrow-one,
#lp-arrow-two,
#lp-arrow-three {
  -webkit-animation: arrow-scroll 1s infinite;
  -moz-animation: arrow-scroll 1s infinite;
  animation: arrow-scroll 1s infinite;
}

#lp-arrow-one {
  margin-top: 1px;
  -webkit-animation-delay: .1s;
  -moz-animation-delay: .1s;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
  animation-delay: alternate;
}

#lp-arrow-two {
  margin-top: -6px;
  -webkit-animation-delay: .2s;
  -moz-animation-delay: .2s;
  -webkit-animation-direction: alternate;
  animation-delay: .2s;
  animation-direction: alternate;
}

#lp-arrow-three {
  margin-top: -6px;
  -webkit-animation-delay: .3s;
  -moz-animation-delay: .3s;
  -webkit-animation-direction: alternate;
  animation-delay: .3s;
  animation-direction: alternate;
}

@-webkit-keyframes arrow-scroll {
  0% {
    opacity: 0;
  }

  50% {
    opacity: .5;
  }

  100% {
    opacity: 1;
  }
}

@-moz-keyframes arrow-scroll {
  0% {
    opacity: 0;
  }

  50% {
    opacity: .5;
  }

  100% {
    opacity: 1;
  }
}

@-o-keyframes arrow-scroll {
  0% {
    opacity: 0;
  }

  50% {
    opacity: .5;
  }

  100% {
    opacity: 1;
  }
}

@keyframes arrow-scroll {
  0% {
    opacity: 0;
  }

  50% {
    opacity: .5;
  }

  100% {
    opacity: 1;
  }
}

/*-------------------------MOBILE NAVBAR--------------------------------------------*/
nav {
  background-color: transparent;
  position: -webkit-sticky !important;
  position: sticky !important;
  top: 0;
  z-index: 1020;
}

nav button span {
  background: #fff;
  padding: 1rem;
  border: 5px solid #fff !important;
  border-radius: 0.5rem;
}

.offcanvas {
  background: radial-gradient(rgb(10, 0, 32), rgb(0, 0, 0));
  border-right: 1px solid #fff !important;
  max-width: 250px;
}

.navbar-brand {
  padding-top: .75rem;
  padding-bottom: .75rem;
  font-size: 1.1rem;
  text-align: center;
  color: #fff;
  letter-spacing: 2px;
}

.navbar-brand:hover {
  color: #fff !important;
}

.offcanvas-body {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.navbar-nav {
  display: flex;
  justify-content: center;
  flex-grow: 1;
  padding-right: 0.75rem;
}

.nav-item {
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  letter-spacing: 2px;
}

.nav-link {
  color: #fff;
}

.nav-link:hover {
  color: #1976D2;
}

.nav-link.active {
  color: #1976d2 !important;
}

/*-------------------------MAIN--------------------------------------------*/
main {
  position: relative;
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
}

@media (min-width: 768px) {
  main {
    padding-right: 1.5rem !important;
    padding-left: 1.5rem !important;
  }
}

@media (min-width: 576px) {
  main {
    margin-left: auto !important;
  }
}

/*-------------------------SECTION--------------------------------------------*/

section {
  padding-top: 3rem
}

section hr {
  display: block;
  color: #1E88E5;
  width: 200px;
  height: 2px;
  background-color: #1E88E5;
  margin-left: auto;
  margin-right: auto;
}

.section-header p {
  color: #a1a1a1;
  font-size: 18px;
  text-align: center;
}
/* ... */

